[gd_scene load_steps=2 format=3 uid="uid://cbn0pl83c1rbp"]

[ext_resource type="Script" uid="uid://cg271ogqr5kuh" path="res://key_manager.gd" id="1_ur028"]

[node name="key_manager" type="Node2D"]
script = ExtResource("1_ur028")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="song_label" type="Label" parent="."]
offset_left = 432.0
offset_top = 168.0
offset_right = 702.0
offset_bottom = 191.0

[node name="damage_label" type="Label" parent="."]
offset_left = 424.0
offset_top = 232.0
offset_right = 694.0
offset_bottom = 255.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
